@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.1
 
+	- Fl_X::set_xid() didn't initialize the backbuffer_bad
+	  element that was used with XDBE.
 	- Fl_Shared_Image::uncache() was not implemented.
 	- Fl::set_font() didn't 0-initialize all font descriptor
 	  data.
